Adicionando estrutura inicial  do HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +10,105 @@
     <link rel="icon" type="image/svg" href="./assets/img/user.svg" />
     <title>Meu Perfil</title>
 </head>
+
 <body>
-    <!-- Cabeçalho da Página (header) -->
-		<header>
-            
-        </header>
+    <header>
 
-		<!-- Seção Principal da Página (main) -->
-		<main>
+        <div id="header_content">
 
-        </main>
+            <div id="titulo">
 
-		<!-- Rodapé da Página (footer) -->
-		<footer>
+                <h1>Felix Augusto Ferreira Oliveira</h1>
 
-        </footer>
+            </div>
+
+            <nav>
+
+                <ul id="menu">
+
+                    <li>
+                        <a href="index.html"> Home </a>
+                    </li>
+                    <li>
+                        <a href="contato.html"> Contato </a>
+                    </li>
+
+                </ul>
+
+            </nav>
+
+        </div>
+
+    </header>
+
+    <main>
+
+        <section id="about">
+            <h2>Sobre mim</h2>
+
+            <div id="conteudo">
+
+                <img src="./assets/img/user.svg" alt="Ilustração do criador desse conteudo" />
+
+                <article id="sobre_texto">
+                    <p>
+                        Minha jornada começou quando me mudei do interior da Bahia para o Rio de Janeiro ainda no ensino
+                        médio, onde descobri minha paixão por desenvolvimento de sistemas no Colégio Pedro II.
+                        Foi lá que dei meus primeiros passos na programação e me aprofundei no impacto que a tecnologia
+                        pode ter na vida das pessoas.
+                        Ao longo do tempo, passei por experiências que moldaram meu olhar para o design e a
+                        acessibilidade. Seja criando soluções front-end, desenvolvendo projetos inclusivos ou
+                        mergulhando no universo do UX Design, minha motivação sempre foi clara: criar algo que faça
+                        sentido, que seja útil e que conecte pessoas.
+                    </p>
+                    <p>
+                        Minha história é feita de desafios e mudanças, mas também de muita resiliência e aprendizado.
+                        Aqui no meu portfólio, você vai encontrar projetos que refletem não só o que sei fazer, mas
+                        também minha vontade de continuar aprendendo e contribuindo para um futuro mais acessível e
+                        inovador.
+
+                        Gostou? Bora trocar ideias e criar algo incrível juntos!
+                    </p>
+                </article>
+            </div>
+
+        </section>
+
+        <section id="video">
+
+            <h2>Meu vídeo favorito:</h2>
+
+            <div class="youtube">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+        <section id="redes_sociais">
+
+            <a href="https://www.linkedin.com/in/felix-augusto/">
+                <img src="assets/img/linkedin.svg" alt="LinkedIn" />
+            </a>
+            <a href="https://github.com/AugustoFO">
+                <img src="assets/img/github.svg" alt="Github" />
+            </a>
+            <a href="https://www.instagram.com/augustofeoliv/">
+                <img src="assets/img/instagram.svg" alt="Instagram" />
+            </a>
+
+        </section>
+
+        <h3>
+            Feito com 🧡 por Felix Augusto - 2025
+        </h3>
+
+    </footer>
 </body>
+
 </html>
