--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
     <meta name="author" content="Felix Augusto Ferreira Oliveira">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="icon" type="image/svg" href="./assets/img/user.svg" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Meu Perfil</title>
 </head>
 
 <body>
+
+    <div class="custom-shape-divider-top-1736381775">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+                d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+                opacity=".25" class="shape-fill"></path>
+            <path
+                d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+                opacity=".5" class="shape-fill"></path>
+            <path
+                d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+                class="shape-fill"></path>
+        </svg>
+    </div>
+
     <header>
 
-        <div id="header_content">
-
-            <div id="titulo">
-
-                <h1>Felix Augusto Ferreira Oliveira</h1>
-
-            </div>
+        <div id="header_content" class="flex">
 
             <nav>
 
@@ -43,12 +53,11 @@
 
     <main>
 
-        <section id="about">
-            <h2>Sobre mim</h2>
+        <section id="about" class="flex_start">
 
-            <div id="conteudo">
+            <h1>Olá, me chamo <span class="nome">Felix Augusto</span></h1>
 
-                <img src="./assets/img/user.svg" alt="Ilustração do criador desse conteudo" />
+            <div id="conteudo" class="flex">
 
                 <article id="sobre_texto">
                     <p>
@@ -56,6 +65,8 @@
                         médio, onde descobri minha paixão por desenvolvimento de sistemas no Colégio Pedro II.
                         Foi lá que dei meus primeiros passos na programação e me aprofundei no impacto que a tecnologia
                         pode ter na vida das pessoas.
+                    </p>
+                    <p>
                         Ao longo do tempo, passei por experiências que moldaram meu olhar para o design e a
                         acessibilidade. Seja criando soluções front-end, desenvolvendo projetos inclusivos ou
                         mergulhando no universo do UX Design, minha motivação sempre foi clara: criar algo que faça
@@ -70,25 +81,31 @@
                         Gostou? Bora trocar ideias e criar algo incrível juntos!
                     </p>
                 </article>
+
+                <img src="./assets/img/user.svg" alt="Ilustrção do Felix Augusto">
+
             </div>
 
         </section>
 
-        <section id="video">
 
-            <h2>Meu vídeo favorito:</h2>
+        <section id="musica" class="flex_start">
 
-            <div class="youtube">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
-                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <h2>Minha música favorita:</h2>
+
+            <div class="spotify" class="flex">
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/track/1QoyuMHNBe7lg3YW4Qtll4?utm_source=generator" width="100%"
+                    height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
 
         </section>
 
     </main>
 
-    <footer>
+    <footer class="flex">
 
         <section id="redes_sociais">
 
